# PyTorchInsight

./: .env.example  .gitignore  .mcp.json  .mcp.json.example  CLAUDE.md  LICENSE  README.md  opencode.json  opencode.json.example  pyproject.toml  user-prompt-core-dev.md  user-prompt.example.md  user-prompt.md
.github/workflows/: weekly-report.yml
.opencode/agents/: briefing-composer.md  composer.md  external-source-scout-slack.md  external-source-scout-web.md  github-scout.md  item-analyst.md  openinsight-orchestrator.md  project-coordinator.md  pytorchinsight-orchestrator.md  report-evaluator.md
.opencode/skills/openinsight-briefing-style/: SKILL.md
.opencode/skills/pytorchinsight-briefing-style/: SKILL.md
docs/: mcp.md  multiagent.md  requirement.md  setup.md
docs/plan/: multiagent-v2-plan.md
openspec/changes/complete-test-coverage/: design.md  proposal.md  tasks.md
openspec/changes/multiagent-v2/: design.md  proposal.md  tasks.md
openspec/changes/remove-slack-source/: design.md  proposal.md  tasks.md
projects/: pytorch.md  torch-npu.md
reports/: pytorch_community_briefing_2026-03-23.html  pytorch_community_briefing_2026-03-23_v2.html  pytorch_community_briefing_2026-03-23_v3.html
src/pytorch_community_mcp/: __init__.py  __main__.py  config.py  formatter.py  server.py
tests/: conftest.py  evaluate.md  queries.md  run-e2e.sh  test_clients.py  test_contributors_tool.py  test_e2e.py  test_formatter.py  test_github_cache.py  test_github_client.py  test_github_stats.py  test_integration.py  test_issue_detail.py  test_pr_detail.py  test_tools.py
(+94 files in other folders)
