[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytorch-community-mcp"
version = "0.1.0"
description = "A domain-specific MCP server for PyTorch community intelligence"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "mcp[cli]>=1.0.0",
    "fastmcp>=2.0.0",
    "PyGithub>=2.0.0",
    "httpx>=0.27.0",
    "feedparser>=6.0.0",
    "socksio>=1.0.0",
    "requests-cache>=1.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "responses>=0.25",
]

[project.scripts]
pytorch-community-mcp = "pytorch_community_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pytorch_community_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/pytorch_community_mcp"]
omit = []

[tool.coverage.report]
fail_under = 80
show_missing = true
